# herd-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
.herd/: craft.md  operations.md
.herd/dbt/: dbt_project.yml  init_schema.sql  profiles.yml
.herd/decisions/: 0001-remove-create-stubs-flag.md  0002-conceptual-yml-single-source-of-truth.md  0003-hundred-percent-ai-generated.md  0004-opus-for-interpreters-sonnet-for-executors.md  0005-qa-before-merge-always.md  0006-never-push-to-main.md  0007-data-vault-for-herd-mcp.md  0008-evidence-dev-for-dashboards.md  0009-agents-aware-of-mcp-and-docs.md  0010-herd-mcp-single-pane-for-tickets.md  0011-mcp-single-pane-all-common-flows.md  0012-herd-as-standalone-framework.md  0013-agent-decisions-slack-feedback-loop.md  0014-historical-backfill-from-linear-github.md  0015-agent-self-driven-via-rest-api.md  0016-slack-driven-mao-activation.md  0020-package-split-mapping.md
.herd/docs/: agent-reference.md  dashboard-reference.md  hdr-guide.md  mcp-server.md  overview.md  schema-reference.md  templates.md  workflow.md
.herd/evidence/: evidence.config.yaml  package-lock.json  package.json
.herd/roles/: gauss.md  grunt.md  mini-mao.md  pikasso.md  shakesquill.md  wardenstein.md
docs/: index.html
herd_core/: __init__.py
herd_mcp/: __main__.py  auth.py  bus.py  server.py
tests/: __init__.py  conftest.py  test_adapters.py  test_adapters_core.py  test_auth.py  test_bus.py  test_checkin.py  test_config.py  test_init.py  test_list_tickets.py  test_queries.py  test_server.py  test_types.py
(+353 files in other folders)
