[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-core"
version = "0.0.1"
description = "Agent team governance framework — execution-agnostic roles, authority models, decision capture, and craft standards for AI agent teams."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Faust Eriksen" }
]
keywords = [
    "ai", "agents", "governance", "multi-agent", "agent-framework",
    "decision-records", "craft-standards", "team-topology"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/fausteriksen/herd"
Documentation = "https://github.com/fausteriksen/herd"
Repository = "https://github.com/fausteriksen/herd"
Issues = "https://github.com/fausteriksen/herd/issues"
